test/fail_compilation/imports/incompletemodname.d
// The point of this module is that it should be called imports.incompletemodname
// but it omits the "imports" in it's name.
module incompletemodname;
